--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,5 +1,5 @@
 name: Build my program
-on: push
+on: workflow_dispatch
 
 jobs:
   build:
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/checkout@v1
         with:
-          repository: gfphoenix78/plang
+          repository: git@github.com:gfphoenix78/plang.git
           token: ${{ secrets.ACCESS_TOKEN }}
           ref: master
       - uses: actions/checkout@v1
